# aussiebot

./: Cargo.toml  LICENSE  README.md  package.json  util.js
back/: Cargo.toml  index.js  package.json
back/db/: index.js
back/src/: error.rs  lib.rs
back/src/auth/: mod.rs
back/src/cache/: mod.rs
back/src/cmds/: filter.rs  give.rs  hours.rs  levenshtein.rs  link.rs  log.rs  memebank.rs  mod.rs  ping.rs  points.rs  quote.rs  reaction_role.rs  regex_filter.rs  russian_roulette.rs  stream.rs  streamlabs.rs  timer.rs  transfer.rs  util.rs
back/src/db/: give.rs  hours.rs  link.rs  mod.rs  modaction.rs
back/src/db/sql/delete/: link_tw.sql  link_yt.sql
back/src/db/sql/insert/: modaction_discord.sql  modaction_twitch.sql  modaction_youtube.sql
back/src/db/sql/migrations/discord/: down.sql  up.sql
back/src/db/sql/migrations/link_yt/: down.sql  up.sql
back/src/db/sql/migrations/modaction/: down.sql  up.sql
back/src/db/sql/migrations/twitch/: down.sql  up.sql
back/src/db/sql/migrations/views/: up.sql
back/src/db/sql/select/: discord_id_lock.sql  hours_discord.sql  hours_twitch.sql  hours_youtube.sql  modaction_discord.sql  modaction_twitch.sql  modaction_youtube.sql  points_discord.sql  points_twitch.sql  points_youtube.sql  twitch_id_lock.sql  youtube_id_lock.sql
back/src/db/sql/update/: decr_points_discord.sql  decr_points_twitch.sql  decr_points_youtube.sql  incr_points_discord_id.sql  incr_points_discord_name.sql  incr_points_twitch_id.sql  incr_points_youtube_id.sql  incr_points_youtube_name.sql  set_points_discord.sql  set_points_twitch.sql  set_points_youtube.sql
back/src/db/sql/upsert/: discord_id.sql  hours_discord.sql  hours_twitch.sql  hours_youtube.sql  link_tw.sql  link_yt.sql  twitch_id.sql  youtube_id.sql
back/src/db/sql/view/: mod_disc.sql  points_discord.sql  points_twitch.sql  points_youtube.sql
back/src/lock/: mod.rs
back/src/msg/: discord.rs  mod.rs  util.rs
back/src/pubsub/: mod.rs
back/src/ws/: mod.rs
back_derive/: Cargo.toml  README.md
back_derive/src/: lib.rs
backrs/: Cargo.toml  build.rs
backrs/src/: cmds.rs  main.rs  msg.rs  resp.rs  util.rs
discord/: Cargo.toml  deploy-commands.js  index.js  package.json
discord/src/: discord.rs  main.rs  msg.rs
discordrs/: Cargo.toml  expanded.rs
discordrs/src/: main.rs  msg.rs  resp.rs
front/: package.json
front/src/: App.tsx  Auth.tsx  Config.tsx  Logs.tsx  Main.tsx  index.css  index.tsx  machine.ts  machine.typegen.ts  output.css  types.ts  util.ts
yt/: chat.js  index.js  package.json
