[package]
name = "back"
version = "0.1.0"
edition = "2021"
authors = ["llama"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
paste = "1"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
futures-util = "0.3"
tokio-postgres = "0.7"
bb8 = "0.8"
bb8-postgres = "0.8"
bb8-redis = "0.11"
parking_lot = "0.12"
futures-channel = "0.3"
dotenv = "0.15"
bitflags = "1.*"
once_cell = { version = "1.*", features = ["parking_lot"] }
tokio-tungstenite = "*"
levenshtein = "1.0.5"
levenshtein_automata = "0.2.1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
tracing-appender = "0.*"
url = "2.*"
back_derive = { path = "../back_derive" }