[package]
name = "back_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["extra-traits", "full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
bitflags = "1.*"
once_cell = { version = "1.*", features = ["parking_lot"] }
