[package]
name = "backrs"
version = "0.1.0"
edition = "2021"
authors = ["llama"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
redis = { version = "0.21.5", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-postgres = "0.7.5"
bb8 = "0.7"
bb8-postgres = "0.7"
bb8-redis = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
futures-util = "0.3"
async-trait = "0.1.52"
regex = "1.5"
paste = "1"
once_cell = "1.10.0"
rand = "0.8.5"
tokio-tungstenite = "*"
clap = { version = "*", features = ["derive"] }
parking_lot = "0.12"


[profile.release]
strip = "debuginfo"
incremental = true