[package]
name = "discordrs"
version = "0.1.0"
edition = "2021"
authors = ["llama"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.*", features = ["full"] }
dotenv = "0.*"
serenity = { version = "0.*", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "cache"] }
bb8-redis = "0.*"
redis = { version = "0.*", features = ["tokio-comp"] }
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
parking_lot = "0.*"
regex = "1.*"
once_cell = "1.*"
tracing = "0.*"
tracing-subscriber = { version = "0.*", features = ["local-time"] }
tracing-appender = "0.*"

[dependencies.back]
path = "../back"

